--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 #Se debe proporcionar el puerto que se menciona al ejecutar el comando oc port-forward mysql-1-xr858 :3306, tener en cuenta el nombre del pod
 #proporcionado en la consola web de OpenShift y verificar que el pod este arriba para ejecutar el comando
-spring.datasource.url=jdbc:mysql://localhost:3306/trabajador?useSSL=false&serverTimeZone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://172.30.112.162:3306/trabajador?useSSL=false&serverTimeZone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=sofia
 spring.datasource.password=sofia
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
